[package]
name = "include-wgsl-oil"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "Includes a WGSL file with the `naga-oil` preprocessor. "
homepage = "https://github.com/LucentFlux/include-wgsl-oil"
repository = "https://github.com/LucentFlux/include-wgsl-oil"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
naga = { version = "24.0", default-features = false, features = ["wgsl-in", "wgsl-out"] }
naga_oil = { version = "0.17.0", default-features = false }
naga-to-tokenstream = { git = "https://github.com/DouglasDwyer/naga-to-tokenstream", rev = "b50d184e5d74584a9ac88c6aaecb0bb65d8f5edd", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
glob = { version = "0.3", default-features = false }
pathdiff = { version = "0.2", default-features = false }
regex = { version = "1.9", default-features = false }
lazy_static = { version = "1.5", default-features = false }
daggy = { version = "0.8", default-features = false }

# Try to get cargo to match versions with naga and naga_oil by having a huge range
data-encoding = "2" 

[dev-dependencies]
encase = {version = "0.9", features = ["glam"]}
glam = "0.28"

[lib]
proc-macro = true

[features]
minify = ["naga-to-tokenstream/minify"]
glam = []
naga = []
encase = []
